app/assets/v2/css/profile.css
.profile_details .container{
  min-height: 150px;
}

.overflow-visible {
  overflow: visible;
}

.profile-card {
  background: white;
  border-radius: 5px;
  z-index: 1;
  position: relative;
  padding: 2rem;
}

.profile-header__avatar {
  float: left;
  width: 7.25rem;
  height: 7.25rem;
  border-radius: 50%;
}

.profile-header {
  position: relative;
}

.profile-header__handle {
  padding-top: 0.8rem;
  margin-bottom: 0;
  line-height: 1;
  font-weight: 700;
  font-size: 1.7rem;
}

.profile-header__handle small {
  text-transform: none;
}

.profile-header__bio {
  clear: both;
}

.profile-bounties__group-title > i {
  color: #25E899;
}

.profile-header__links {
  margin: 0;
  padding: 0;
}

.profile-header__links a {
  margin-left: 2px;
  margin-right: 2px;
  font-size: 1.2rem;
  transition: all 0.3s;
  color: #000;
  text-decoration: none;
}

.profile-header__links a:hover i {
  color: #1AB56D;
}

.profile-header__links img {
  width: 1.5rem;
  height: 1.5rem;
  margin-right: 0.5em;
  filter: invert(100%);
}

.float_avatar_image {
  margin-top: -140px;
  position: relative;
}

.float_avatar_image img {
  height: 186px;
  width: 186px;
  border: 3px solid #FFFFFF;
  box-shadow: 0 -2px 4px 0 rgba(0,0,0,0.50);
}

.avatar_edit {
  text-align: center;
  background: linear-gradient(to top,rgba(255,255,255,0.6),rgba(255,255,255,0.0));
  border-radius: 0% 0% 50% 50% / 0% 0% 100% 100%;
  color: black;
  height: 90px;
  width: 180px;
  position: absolute;
  top: 93px;
  margin: auto;
  right: 0;
  left: 0;
  transition: .2s all linear;
}

.avatar_edit_text {
  position: absolute;
  top: 50%;
  color: black;
  font-weight: bold;
  font-size: 20px;
  margin: auto;
  width: 100%;
  height: 40px;
}

.is_my_profile a:hover .profile-header__avatar{
  border: 3px solid #0fce7c;
}

.is_my_profile{
  cursor: pointer;
}

a:hover .avatar_edit {
  background-color: rgba(255, 255, 255, 0.7);
  height: 180px;
  width: 180px;
  top: 3px;
  border-radius: 50%;
}

a:hover .avatar_edit .avatar_edit_text {
  top: 40%;
}

.picky img {
  width: 100%;
  height: auto;
  vertical-align: middle;
}


.profile-organizations .organization {
  display: inline-block;
}

.profile-bounties--activities{
  min-height: 200px;
}

.profile-organizations .organization img{
  max-height: 4rem;
  max-width: 4rem;
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
  border-radius: 50%;
}

@media (max-width: 767.98px) {

  .profile-header__main-infos {
    text-align: center;
  }

  .profile-header__avatar {
    float: none;
    margin-right: 0!important;
  }

  .profile-header__handle {
    display: block;
  }

  .profile-header__links li {
    text-align: center;
    float: none;
    margin-right: 0;
  }
}


.profile-header__stats {
  border: none;
}

.profile-header__stats .card-header {
  padding: 0.1rem 0.7rem;
  color: #666;
  border-radius: 0;
  border-bottom: none;
  font-size: 1.2rem;
}

.profile-header__stats .card-header b {
  color: #000;
  font-size: 1.7rem;
}

.profile-header__stats .card-body {
  padding: 0.7rem;
}

@media (min-width: 992px) and (max-width: 1199.98px) {
  .profile-header__stats .card-header {
    padding: 0 0.5rem;
    font-size: 1.2rem;
  }

  .profile-header__stats .card-body {
    padding: 0.5rem;
    font-size: 1rem;
  }
}

.profile-header__stats ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.profile-header__stats li {
  margin: 0.15rem 0 0;
}

.profile-header__stats li:first-child {
  margin-top: 0;
}

.profile-header__stats--contributor .card-header {
  background-color: transparent;
}

.card-header::after {
  content: '';
  position: relative;
  height: 4px;
  width: 100%;
  display: block;
  border-radius: 6px;
  animation: grow 1s ease-in-out;
}

.animate-verify {
  animation: verify 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
}

@keyframes grow {
  0% {
    width: 2%;
  }
  50% {
    width: 2%;
  }
  100% {
    width: 100%;
  }
}

@keyframes verify {
  0% {
    transform: scale(1.5, 1.3);
  }
  100% {
    transform: scale(1);
  }
}

.profile-header__stats--contributor .card-header::after {
  background: #00eb93;
}

.profile-header__stats--funder .card-header::after {
  background: #FFCE08;
}

.profile-header__stats--funder .card-header {
  background-color: transparent;
}

.profile-section-title {
  border-bottom: 2px solid #3E24FB;
}

.profile-bounties--loading {
  background-image: url('/static/v2/images/loading_v2.gif');
  background-repeat: no-repeat;
  background-position: 0 -1rem;
  background-size: 4rem;
  height: 3rem;
}

.profile-bounties .avatar {
  width: 3.125rem;
  height: 3.125rem;
  margin-right: auto;
  margin-left: auto;
  border-radius: 100%;
  min-height: 3.125rem;
}

.profile-bounties .bounty_row {
  padding-left: 0;
  padding-right: 0;
}

.profile-bounties .bounty_row--hidden {
  display: none;
}

.profile-bounties .bounty-summary {
  padding-left: 0;
  padding-right: 0;
}

.profile-bounties .profile-bounties__btn-show-all {
  border-color: #D3D3D3;
  font-size: 0.875rem;
  font-weight: 300;
}

.profile-bounties .profile-bounties__btn-show-all:hover,
.profile-bounties .profile-bounties__btn-show-all:focus,
.profile-bounties .profile-bounties__btn-show-all:active {
  border-color: #D3D3D3;
  color: #6c757d;
  background-color: #F9F9F9;
}

.profile-bounties__group-title {
  color: #0D0764;
  font-size: 1rem;
  padding: 0.5rem 0 5px 0;
  border-bottom: 2px solid #3E24FB;
}

.profile-bounties__sort_label {
  color: #3E24FB;
}

.profile_details .bounty_row:first-child {
  border-top: none;
}

.profile_details .works_with_list span {
  font-weight: bolder;
  display: block;
  margin-top: 6px;
  margin-bottom: 6px;
}

.profile_details .works_with_list img {
  max-width: 30px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.20);
}

.profile_details .works_with_list .plus-img {
  color: #3E00FF;
  width: 30px;
  height: 30px;
  display: inline-flex;
  background: #F8F9FA;
  border-radius: 30px;
  align-items: center;
  vertical-align: middle;
  font-size: 10px;
  justify-content: center;
}

.profile_details .works_with_list a:hover {
  text-decoration: none;
  transform: scale(1.1);
}

.no-profile-button {
  background-color: #3E00FF;
  color: #FFFFFF;
  font-size: 0.875rem;
}

.no-profile-textcolor {
  color: #666666;
}

.profile-banner {
  display: flex;
  top: 0;
  bottom: 0;
  color: #ffffff;
  z-index: 1;
  width: 100vw;
  cursor: pointer;
}

.profile-banner:hover {
  background: linear-gradient(to top,rgba(255,255,255,0.6),rgba(255,255,255,0.0));
}

.profile-banner .h4 {
  font-weight: bold;
  text-shadow: 1px 1px 1px #000;
  opacity: 0.5;
  padding: 5px;
}

.profile-banner:hover .h4 {
  opacity: 1;
}

.picky {
  cursor: pointer;
}

.picky:active, .picky:focus {
  border: 2px solid #007bff;
}

.selected {
  border: 5px solid #007bff;
}

nav.navbar.navbar-dark{
  background-image: url(/static/v2/images/header-bg.png);
  z-index: 2;
}

